# calling-ocaml-from-c-from-swift

./: README.md  dune  dune-project  main.c  main.swift  mod.ml  modwrap.c
